# INDEX_ALL

./: .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  PROMPTS.md  README.md  ROADMAP.md  index_all.py  pyproject.toml  requirements.txt  test_index_all.py
.github/workflows/: ci.yml
apps/android/app/: build.gradle.kts
docs/: MANUTENCAO.md  PRD_MVP.md  SCHEMA_UNIVERSAL.json
docs/decisions/: README.md
docs/diagrams/: README.md
docs/specs/: README.md
scripts/: Check-Office.ps1  Converter-Doc-Xls.ps1  Merge-Collection.ps1  New-Batch.ps1  Prepare-IOB-Invest-Batches.ps1  Prepare-Invest-Batches.ps1  Processar-Arquivos-Sequencial.ps1  Processar-Lote-Atual.ps1  Processar-Pastas-Sequencial.ps1  Query-Collection.ps1  Reprocessar-Lotes-Convertidos.ps1  Run-Batch.ps1
src/index_all/: __init__.py  cli.py  config.py  main.py
src/index_all/indexing/: catalog_builder.py  collection_summary_builder.py  consultation_payload.py  document_classifier.py  master_index_builder.py  metadata_extractor.py  structure_indexer.py  summary_builder.py
src/index_all/ingestion/: file_router.py
src/index_all/outputs/: html_writer.py  json_writer.py  markdown_writer.py
src/index_all/parsers/: csv_parser.py  docx_parser.py  (+9 more)
tests/: helpers.py  test_answering.py  test_catalog_builder.py  test_chunker.py  test_config.py  test_document_classifier.py  test_docx_parser.py  test_embedding_store.py  test_image_parser.py  test_indexer.py  test_master_index_builder.py  test_pdf_parser.py  test_reranker.py  test_retrieval.py  test_search_engine.py  test_tabular_parsers.py  test_textual_legal_parsers.py
(+9 files in other folders)
